code Restful và update openapi
